<resources>
    <string name="app_name">AndroidLogger</string>
    <string name="add">Añadir</string>
    <string name="refresh">Refresca la lista</string>
    <string name="cancel">Cancelar</string>
    <string name="settings">Ajustes</string>
    <string name="export">Exportar...</string>
    <string name="tvShortcuts">Añade tus actividades frecuentes a accesos directos:</string>
    <string name="lblFabShorcut1">Añadir actividad física</string>
    <string name="etShortcut1">Deporte</string>
    <string name="etShortcut2">Desplazamiento</string>
    <string name="etShortcut3">Comer</string>
    <string name="lblFabShorcut2">Añadir desplazamiento</string>
    <string name="lblFabShorcut3">Añadir comida</string>
    <string name="etLanguage">Elegir idioma:</string>
    <string name="tstSpanish">Has seleccionado Español</string>
    <string name="tstEnglish">You have selected English</string>

    <string-array name="languages">
        <item>español</item>
        <item>english</item>
    </string-array>
</resources>
